<resources>
    <string name="app_name">ArtosExchangeApp</string>

    <string name="action_settings">Settings</string>
    <string name="title_nominal">Nominal</string>
    <string name="title_pembelian">Pembelian</string>
    <string name="title_pemasukan">Pemasukan</string>
    <string name="title_dompet">Dompet</string>
    <string name="title_simpan">Simpan</string>
    <string name="title_pengeluaran">Total Pengeluaran</string>
    <string name="title_pendapatan">Total Pendapatan</string>
    <string name="tab_pendapatan">Pendapatan</string>
    <string name="tab_pengeluaran">Pengeluaran</string>
    <string name="title_converter">Money Currency Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="open_detail">Open Detail</string>
    <string name="notification_title">Target Dompet Tercapai!</string>
    <string name="notification_message">Tareget Dompet Sudah Mencapai yang diharapkan! Kerja Bagus!</string>
    <string name="detail_title">LKP TAM</string>
    <string name="detail_message">Praktikum 27 oktober 2021</string>
    <string name="activity_detail">Notifikasi</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>