<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".create.PendapatanCreateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_dompet">

        <EditText
            android:id="@+id/etPengigat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/title_nominal">

        <EditText
            android:id="@+id/etNominal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_once_date"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_agenda" />

        <TextView
            android:id="@+id/tv_once_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date picker" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSimpan3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/title_simpan"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</LinearLayout>