<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".create.CreateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_pembelian">

        <EditText
            android:id="@+id/etPembelian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/title_nominal">

        <EditText
            android:id="@+id/etNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular" />

        <ImageButton
            android:id="@+id/btn_once_date2"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_agenda" />

        <TextView
            android:id="@+id/tvDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPendapatan"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="-8dp"
            android:layout_marginEnd="106dp"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_bold"
            android:textColor="@color/divider"
            android:textSize="16sp"
            tools:text="12/13/2021" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/title_simpan"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>